--- a/qtify/src/components/navbar.module.css
+++ b/qtify/src/components/navbar.module.css
@@ -3,8 +3,11 @@
     
     width:100%;
     
-    height:100%
-    
+    height:100%;
+
+    line-height: 200px;
+   
+    align-content: space-between;
     }
     
     .wrap{
@@ -34,6 +37,8 @@
     padding:10px 16px;
     
     cursor:pointer;
+
+    font-family : 'Poppins';
     
     }
     
