--- a/qtify/src/components/Section/section.module.css
+++ b/qtify/src/components/Section/section.module.css
@@ -37,6 +37,7 @@
   
   .titlewrapper{
   margin-top: 6px;
+  text-decoration: none;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
