--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.swiper-slide{
+  width: auto !important;
+}
