--- a/qtify/src/components/Card/cardcom.module.css
+++ b/qtify/src/components/Card/cardcom.module.css
@@ -10,6 +10,10 @@
     justify-content: space-between;
 }
 
+.genre{
+    display: flex;
+}
+
 .cardWrapper{
     display: flex;
 flex-direction: row;
